@@ -1,5 +1,8 @@
 	* Changed the email address of Rafael to the new one in the ChangeLog
 	and README files.
+	* Someone reported that sockflow() and peerflow() were broken. The reason
+	for that was that unpack_sockaddr_in6_all was not imported from Socket6.
+	This release fixes it (with tests in t/host6.t).
 
 2008-02-05 Shlomi Fish <shlomif@iglu.org.il>
 
